--- a/style.css
+++ b/style.css
@@ -224,3 +224,26 @@ button:hover {
   color: #e08604;
   border: #e08604 1px solid;
 }
+
+/* This CSS for Footer Section */
+footer {
+  display: block;
+  justify-content: center;
+  text-align: center;
+}
+
+footer .line-up {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+footer .adress {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+footer .line-down {
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
