--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ button:hover {
 }
 
 .about img {
-  height: auto;
+  height: 392px;
   width: auto;
 }
 
@@ -155,6 +155,7 @@ button:hover {
   flex-direction: column;
   margin-right: 300px;
   text-align: justify;
+  margin-bottom: 50px;
 }
 
 /* This CSS for Portfolio Section */
@@ -230,6 +231,22 @@ footer {
   display: block;
   justify-content: center;
   text-align: center;
+}
+
+footer #contact {
+  font-size: 32px;
+  color: #e08604;
+  margin-bottom: 15px;
+}
+
+.interested-contact {
+  font-size: 32px;
+  font-weight: 400;
+  margin-top: 0;
+}
+
+footer p {
+  font-size: 16px;
 }
 
 footer .line-up {
