--- a/style.css
+++ b/style.css
@@ -175,6 +175,15 @@ button:hover {
   margin-bottom: 0;
 }
 
+.portfolio-button button a {
+  text-decoration: none;
+  color: #e9e9e9;
+}
+
+.portfolio-button button a:hover {
+  color: #e08604;
+}
+
 .portfolio-button button {
   font-size: 12px;
   padding: 5px 15px;
