Fix: Button in portfolio section

--- a/style.css
+++ b/style.css
@@ -175,6 +175,10 @@ button:hover {
   margin-bottom: 0;
 }
 
+.portfolio-button nav ul li {
+  display: flex;
+}
+
 .portfolio-button button a {
   text-decoration: none;
   color: #e9e9e9;
