--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   padding: 0;
   background-image: url(images/bg-home.png);
   background-repeat: no-repeat;
+  width: 100%;
 }
 
 button:hover {
