--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
   margin: 0;
   padding: 0;
   background-image: url(images/bg-home.png);
-  background-repeat: no-repeat;
-  width: 100%;
+  background-repeat: repeat-x;
 }
 
 button:hover {
