--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ button:hover {
   cursor: pointer;
 }
 
+.hero nav .responsive-mobile {
+  display: none;
+}
+
 /* This CSS For Navbar */
 
 .hero {
@@ -37,7 +41,7 @@ button:hover {
 nav {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   padding-top: 0px;
   padding-left: 10%;
   padding-right: 10%;
@@ -86,6 +90,7 @@ button:hover {
   flex-wrap: wrap;
   padding-top: 142px;
   padding-bottom: 130px;
+  padding-left: 40px;
   color: #e9e9e9;
   background-color: #01030d;
 }
@@ -309,4 +314,259 @@ footer .line-down {
   margin-top: 50px;
   margin-bottom: 20px;
   border: 1px solid #e08604;
+}
+
+/* RESPONSIVE PHONE SCREEN */
+
+@media screen and (max-width: 320px) {
+  /* CSS FOR NAVBAR */
+
+  .hero {
+    top: 0;
+    position: fixed;
+    width: 100%;
+  }
+
+  .hero img {
+    width: 50%;
+    height: 100%;
+    margin-left: 40%;
+  }
+
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    background-color: #01030d;
+    padding-top: 3%;
+    padding-bottom: 3%;
+  }
+
+  nav ul li {
+    display: none;
+  }
+
+  .hero .btn-download {
+    display: none;
+  }
+
+  .hero nav .responsive-mobile {
+    display: inline;
+    color: #e9e9e9;
+  }
+
+  .fa-bars {
+    font-size: 23px;
+  }
+
+  /* CSS FOR HOME SECTION */
+
+  .home-section {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    color: #e9e9e9;
+    background-color: #01030d;
+    padding-left: 0;
+    padding-bottom: 30px;
+  }
+
+  .profile-home img {
+    display: none;
+  }
+
+  .text-home {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .welcome {
+    display: flex;
+    color: #e08604;
+    font-weight: lighter;
+    font-size: 12px;
+    border: #e08604 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-left: auto;
+  }
+
+  .introduction {
+    font-size: 26px;
+    font-weight: bold;
+    margin-top: 0;
+  }
+
+  .role {
+    font-size: 20px;
+    font-weight: lighter;
+    margin-top: -10px;
+  }
+
+  .description {
+    display: none;
+  }
+
+  .fa-brands {
+    display: none;
+  }
+
+  .home-section .btn-hire-me {
+    font-size: 12px;
+    padding: 10px 20px 10px 20px;
+  }
+
+  /* CSS FOR ABOUT SECTION */
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin: 0;
+    padding: 15px 20px 30px 20px;
+  }
+
+  .about-me {
+    font-size: 32px;
+    color: #e08604;
+    margin-top: 0;
+  }
+
+  .about img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .about-me-section {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-bottom: 0px;
+  }
+
+  .about-me-section .text-about .know-me {
+    color: #e08604;
+  }
+
+  /* CSS FOR PORTFOLIO SECTION */
+
+  .portfolio-section {
+    display: flex;
+    flex-direction: column;
+    background-color: #01030d;
+    color: #e9e9e9;
+    padding: 15px 50px 30px 50px;
+  }
+
+  .portfolio-me {
+    font-size: 32px;
+    color: #e08604;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+
+  .portfolio-button {
+    display: none;
+  }
+
+  .portfolios img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .portfolios {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 5px;
+    gap: 0;
+  }
+
+  .portfolios a {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: #e9e9e9;
+    margin-bottom: 65px;
+  }
+
+  .portfolios span:hover {
+    color: #e08604;
+  }
+
+  .portfolio-section .view-all-btn {
+    background: none;
+    color: #e9e9e9;
+    border: #e9e9e9 1px solid;
+    border-radius: 100px;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+
+  .portfolio-section .view-all-btn:hover {
+    color: #e08604;
+    border: #e08604 1px solid;
+  }
+
+  /* CSS FOR FOOTER SECTION */
+  footer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  footer #contact {
+    display: none;
+    font-size: 32px;
+    color: #e08604;
+    margin-bottom: 0px;
+    margin-top: 0;
+  }
+
+  .interested-contact {
+    display: none;
+    font-size: 32px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  footer .description-contact {
+    display: none;
+    font-size: 16px;
+  }
+
+  footer .adress .my-address {
+    display: flex;
+    justify-content: start;
+    margin-right: 0;
+  }
+
+  footer .adress .email-phone {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    gap: 0;
+  }
+
+  footer .adress {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  footer .line-up {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    border: 1px solid #e08604;
+  }
+
+  footer .line-down {
+    margin-top: 20px;
+    margin-bottom: 0px;
+    border: 1px solid #e08604;
+  }
 }
