--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
   margin: 0;
   padding: 0;
   max-width: 100%;
+  animation: fadeIn 0.3s;
 }
 
 button:hover {
@@ -243,6 +244,7 @@ button:hover {
   height: 325px;
   width: auto;
   margin-bottom: 11px;
+  border-radius: 20px;
 }
 
 .portfolios {
