--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,7 @@ button:hover {
   width: auto;
   margin-bottom: 11px;
   border-radius: 20px;
+  box-shadow: 1px 0 5px 2px #e08604;
 }
 
 .portfolios {
