--- a/css/style-project.css
+++ b/css/style-project.css
@@ -16,6 +16,14 @@
   margin-bottom: 20px;
 }
 
+.project-btn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+  margin-bottom: 30px;
+}
+
 .project-btn button {
   font-size: 12px;
   padding: 5px 15px;
@@ -23,7 +31,6 @@
   color: #e9e9e9;
   border: #e9e9e9 1px solid;
   border-radius: 100px;
-  margin-bottom: 50px;
 }
 
 .project-btn button:hover {
@@ -72,5 +79,12 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .project-page {
     padding-top: 130px;
+  }
+
+  .project-title p {
+    font-size: 20px;
+    color: #e08604;
+    margin-top: 0;
+    margin-bottom: 30px;
   }
 }
