--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ nav {
   padding-top: 0px;
   padding-left: 10%;
   padding-right: 10%;
-  background-color: #01030d;
+  /* background-color: #01030d; */
 }
 
 nav ul li {
@@ -106,6 +106,10 @@ button:hover {
 header.sticky .hero {
   position: fixed;
   opacity: 0.8;
+}
+
+header.sticky .hero nav {
+  background-color: #01030d;
 }
 
 /* This CSS for Home Section */
